# Track-Explorer

./: .gitignore  CHANGELOG.md  README.md  demo.py  demo_with_fast_track.py  pyproject.toml
configs/: agent.yml  config.yaml  rf-detr.yml
track_explorer/: __init__.py  utils.py  version.py
track_explorer/analysts/: __init__.py  base_analyst.py  langchain_analyst.py
track_explorer/analysts/smolagents_analyst/: retriever.py  smolagents_analyst.py  tools.py
track_gpt/: version.py
track_gpt/analysts/: analyst.py  openai_analyst.py
trackgpt/: __init__.py  version.py
trackgpt/analysts/: __init__.py  base_analyst.py  langchain_analyst.py  llama_index_analyst.py
